src/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>Search_Segment__c</fullName>
        <description>[import] - Examples include: Admissible, Barrett Eligible, Scholar, Under Admissible</description>
        <label>Search Segment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Admissible</fullName>
                </value>
                <value>
                    <fullName>Barrett Eligible</fullName>
                </value>
                <value>
                    <fullName>Scholar</fullName>
                </value>
                <value>
                    <fullName>Under Admissible</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Secondary_Email__c</fullName>
        <description>[import] - Secondary email address for the lead</description>
        <label>Secondary Email</label>
        <type>Email</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Self_Reported_SES__c</fullName>
        <description>Socioeconomic status (SES) is determined by a combination of parental income, 
education, occupation, and household items.</description>
        <inlineHelpText>Socioeconomic status reported by the prospective student.</inlineHelpText>
        <label>Self-Reported SES</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Very High</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Moderate</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Very Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Silverpop_Mailing_Country__c</fullName>
        <formula>Country</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Silverpop Mailing Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Silverpop_Mailing_State__c</fullName>
        <formula>State</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Silverpop Mailing State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Suffix__c</fullName>
        <description>[import] - Examples include: Jr, Sr, II, III, IV, V, VI, VII</description>
        <label>Suffix</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Jr</fullName>
                </value>
                <value>
                    <fullName>Sr</fullName>
                </value>
                <value>
                    <fullName>II</fullName>
                </value>
                <value>
                    <fullName>III</fullName>
                </value>
                <value>
                    <fullName>IV</fullName>
                </value>
                <value>
                    <fullName>V</fullName>
                </value>
                <value>
                    <fullName>VI</fullName>
                </value>
                <value>
                    <fullName>VII</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Suspect_Decile__c</fullName>
        <description>[import] - ** Definition needed for data dictionary **</description>
        <label>Suspect Decile</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Territory_Assignment_Last_Rule_Type__c</fullName>
        <label>Territory Assignment Last Rule Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Freshman Scholar</fullName>
                </value>
                <value>
                    <fullName>International</fullName>
                </value>
                <value>
                    <fullName>Lake Havasu</fullName>
                </value>
                <value>
                    <fullName>Last Attended High-School</fullName>
                </value>
                <value>
                    <fullName>Last Attended College</fullName>
                </value>
                <value>
                    <fullName>Geomarket</fullName>
                </value>
                <value>
                    <fullName>State</fullName>
                </value>
                <value>
                    <fullName>Default User</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Territory_Assignment_Last_Run__c</fullName>
        <label>Territory Assignment Last Run</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Territory_Assignment_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Territory Assignment Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Test_Record__c</fullName>
        <defaultValue>false</defaultValue>
        <description>[import] - To flag test records in production</description>
        <label>Test Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>[import] - Examples include: First Time Freshman, Transfer, Readmission, Masters, Doctoral, Juris Doctor, Certificate, Non-Degree</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Career__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>First Time Freshman</fullName>
                </value>
                <value>
                    <fullName>Transfer</fullName>
                </value>
                <value>
                    <fullName>Readmission</fullName>
                </value>
                <value>
                    <fullName>Masters</fullName>
                </value>
                <value>
                    <fullName>Doctoral</fullName>
                </value>
                <value>
                    <fullName>Juris Doctor</fullName>
                </value>
                <value>
                    <fullName>Certificate</fullName>
                </value>
                <value>
                    <fullName>Non-Degree</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Undergraduate_GPA_Scale__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>[import] - Undergraduate GPA scale for the lead</description>
        <label>Undergraduate GPA Scale</label>
        <referenceTo>GPA_Scale__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads_UGGPAscale</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Undergraduate_GPA__c</fullName>
        <description>[import] - Self Reported Undergraduate GPA for the lead</description>
        <label>Undergraduate GPA</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Undergraduate_Major__c</fullName>
        <description>[import] - Undergraduate Major</description>
        <label>Undergraduate Major</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Veteran_Status__c</fullName>
        <description>[import] - Graduate College prospect and Degree Search web form selection.  Examples include: I am active duty, I am a veteran, I am a spouse or dependent of an active duty or veteran, National Guard, Reserves</description>
        <label>Veteran Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active Duty</fullName>
                </value>
                <value>
                    <fullName>National Guard</fullName>
                </value>
                <value>
                    <fullName>Reserves</fullName>
                </value>
                <value>
                    <fullName>Spouse/Dependent</fullName>
                </value>
                <value>
                    <fullName>Veteran</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>eContacts__Business_Card__c</fullName>
        <label>Image Data Only</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>eContacts__Created_By_eContacts__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Created By eContacts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>eContacts__Location_Text__c</fullName>
        <label>Location Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>eContacts__Location__c</fullName>
        <label>Location</label>
        <scale>15</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>eContacts__Secondary_Image__c</fullName>
        <label>Image Data2 Only</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>edX_Email_Opt_In__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This checked box indicates that an edX student who has opted in for receiving marketing communications about ASU. Please do not contact any students who have opted out of communications (unchecked box).</inlineHelpText>
        <label>edX Lead Email Opt In</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>edX_Name__c</fullName>
        <label>edX Lead Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>edX_Opt_In_Date__c</fullName>
        <label>edX Lead Opt In/Out Last Updated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>edX_Username__c</fullName>
        <description>Unique login user creates for the edX system.</description>
        <inlineHelpText>This is an edX related username and is only referenced in their database.</inlineHelpText>
        <label>edX Lead Username</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__HasOptedOutOfMobile__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mobile Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>et4ae5__Mobile_Country_Code__c</fullName>
        <label>Mobile Country Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>US</fullName>
                    <default>true</default>
                    <label>US</label>
                </value>
                <value>
                    <fullName>AC</fullName>
                </value>
                <value>
                    <fullName>AD</fullName>
                </value>
                <value>
                    <fullName>AE</fullName>
                </value>
                <value>
                    <fullName>AF</fullName>
                </value>
                <value>
                    <fullName>AG</fullName>
                </value>
                <value>
                    <fullName>AI</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AM</fullName>
                </value>
                <value>
                    <fullName>AO</fullName>
                </value>
                <value>
                    <fullName>AQ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AS</fullName>
                </value>
                <value>
                    <fullName>AT</fullName>
                </value>
                <value>
                    <fullName>AU</fullName>
                </value>
                <value>
                    <fullName>AW</fullName>
                </value>
                <value>
                    <fullName>AX</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>BA</fullName>
                </value>
                <value>
                    <fullName>BB</fullName>
                </value>
                <value>
                    <fullName>BD</fullName>
                </value>
                <value>
                    <fullName>BE</fullName>
                </value>
                <value>
                    <fullName>BF</fullName>
                </value>
                <value>
                    <fullName>BG</fullName>
                </value>
                <value>
                    <fullName>BH</fullName>
                </value>
                <value>
                    <fullName>BI</fullName>
                </value>
                <value>
                    <fullName>BJ</fullName>
                </value>
                <value>
                    <fullName>BL</fullName>
                </value>
                <value>
                    <fullName>BM</fullName>
                </value>
                <value>
                    <fullName>BN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>silverpop__CRMI_Modified_Date__c</fullName>
        <label>CRMI Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>silverpop__Last_Sync_Date__c</fullName>
        <label>Last Sync Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>silverpop__Last_Sync_Id__c</fullName>
        <label>Last Sync Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>silverpop__Lead_Rank__c</fullName>
        <label>Lead Rank</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>silverpop__Lead_Score__c</fullName>
        <label>Lead Score</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>silverpop__Silverpop_Behavior_Score__c</fullName>
        <label>Silverpop Behavior Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>silverpop__Silverpop_Lead_Rank__c</fullName>
        <label>Silverpop Lead Rank</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>silverpop__Silverpop_Lead_Score__c</fullName>
        <label>Silverpop Lead Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>silverpop__Silverpop_RecipientID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Silverpop RecipientID</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>silverpop__Sync_to_Silverpop_Chk__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Use "Sync to Silverpop" to determine which leads you want to sync with Silverpop. When the box is checked, the field value CANNOT be changed, the selected leads will be synced to Silverpop and will always sync.</inlineHelpText>
        <label>Sync to Silverpop</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>silverpop__Sync_to_Silverpop__c</fullName>
        <label>No Longer Used</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <sharingModel>ReadWriteTransfer</sharingModel>
    <listViews>
        <fullName>Test_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.EMAIL_OPT_OUT</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Test_Record__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Test Leads</label>
        <sharedTo />
    </listViews>
    <recordTypes>
        <fullName>Processing</fullName>
        <active>true</active>
        <businessProcess>Converstion Process</businessProcess>
        <description>Used to process conversion of the Lead record</description>
        <label>Processing</label>
        
    </recordTypes>
    <recordTypes>
        <fullName>Prospective_Student</fullName>
        <active>true</active>
        <businessProcess>Prospective Student</businessProcess>
        <description>For end users to view information on the Lead record</description>
        <label>Prospective Student</label>
        
    </recordTypes>
    <validationRules>
        <fullName>Lead_Data_Entry_Minimum_Requirements</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
$Setup.Validation_Rule_Exception__c.Run_Validation_Rule__c,
ISCHANGED(Convert_Perform_Conversion__c),
Convert_Perform_Conversion__c = true,
OR(
ISBLANK ( FirstName ),
ISBLANK ( LastName ),
AND(
ISBLANK ( Email ),
ISBLANK ( Phone ),
ISBLANK ( MobilePhone )
)
)
)</errorConditionFormula>
        <errorMessage>You must fill out these required fields in order to convert the Lead to a Contact: First Name, Last Name, and either Phone or Email.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>silverpop__Disable_Changing_Enable_Sync</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
ISCHANGED(silverpop__Sync_to_Silverpop_Chk__c ), silverpop__Sync_to_Silverpop_Chk__c=false)</errorConditionFormula>
        <errorMessage>Sync to Silverpop selection cannot be changed. Once the box is checked, it cannot be unchecked.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>silverpop__Disable_Changing_To_None</fullName>
        <active>false</active>
        <description>Sync to Silverpop selection cannot be changed. Once set to "Yes, Always Sync" or "No, Don't Sync" it cannot be changed back to "-None-.”</description>
        <errorConditionFormula>AND( ISCHANGED(silverpop__Sync_to_Silverpop__c ) &amp;&amp; ISPICKVAL( PRIORVALUE(silverpop__Sync_to_Silverpop__c ) , "No, Don't Sync") ,ISPICKVAL( silverpop__Sync_to_Silverpop__c  , ""))</errorConditionFormula>
        <errorMessage>Sync to Silverpop selection cannot be changed. Once set to "Yes, Always Sync" or "No, Don't Sync" it cannot be changed back to "-None-.”</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>silverpop__Prevent_Change_From_Engage</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
PRIORVALUE( silverpop__Sync_to_Silverpop_Chk__c) = false , 
ISCHANGED( silverpop__CRMI_Modified_Date__c ))</errorConditionFormula>
        <errorDisplayField>silverpop__CRMI_Modified_Date__c</errorDisplayField>
        <errorMessage>Engage contact could not sync to Salesforce because the matching lead or contact in Salesforce has been set to not sync. You will need to change the "Sync to Silverpop" setting for the lead or contact in Salesforce.</errorMessage>
    </validationRules>
</CustomObject>